# AgeOfLazies

./: CMakeLists.txt  README.txt  default_logs.txt  exec.sh  rebuild.sh
Assets/: AttackSpot.3ds  Collector.b3d  CollectorB.b3d  CollectorG.b3d  CollectorR.b3d  CollectorY.b3d  assetRequirements.txt  spot.3ds.b3d
Assets/Assets/Worker/: WorkerLazyWalk.b3d  WorkerLazyWork.b3d
Assets/Assets/models/: ArbreLowPoly.3ds  Bush.3ds  BushEmpty.3ds  Log.3ds  Plant.3ds  Rock.3ds
Assets/Assets/sound/: Noooon.m4a
Assets/Hud/: cursor.b3d  spot.3ds
Assets/Warrior/: Warrior.b3d  WarriorB.b3d  WarriorG.b3d  WarriorR.b3d  WarriorY.b3d
Assets/Worker/: WorkerLazyWalk.b3d  WorkerLazyWork.b3d  WorkerLazyWorkWeap.b3d
Assets/fonts/: font12.xml  font18.xml  font28.xml  font48.xml  irrtum
Assets/fonts/bold/: font18.xml  font28.xml  font48.xml
Assets/models/: ArbreLowPoly.3ds  Bush.3ds  BushEmpty.3ds  LowPolyTree.3ds  Plant.3ds  cursor.b3d
Assets/models/GoldMine/: GoldMine.3ds
Assets/models/Mine/: Mine.3ds
Assets/models/buildings/: Castle.b3d  CastleB.b3d  CastleG.b3d  CastleR.b3d  CastleY.b3d  Forum.3ds  Forum.b3d  ForumB.b3d  ForumG.b3d  ForumR.b3d  ForumY.b3d  Lumber-Mill.3ds  Lumber-Mill.b3d  Lumber-MillB.b3d  Lumber-MillG.b3d  Lumber-MillR.b3d  Lumber-MillY.b3d  Mill.3ds  Mill.b3d  MillB.b3d  MillG.b3d  MillR.b3d  MillY.b3d  Miner-Camp.3ds  Miner-Camp.b3d  Miner-CampB.b3d  Miner-CampG.b3d  Miner-CampR.b3d  Miner-CampY.b3d  Site.3ds  WareHouse.3ds
Assets/sound/: OhBahNon.m4a  POURQUOITASFAITCA.m4a  sonChelouClara.m4a
LuaScripts/: test.lua
LuaScripts/scripts/: scriptInit.lua  scriptTest.lua
include/: AoL.hpp  CommonData.hpp  Constants.hpp  Factory.hpp  IdGenerator.hpp  Logger.hpp  Manager.hpp  Message.hpp  Observer.hpp  Print.hpp  Scopelock.hpp  Stack.hpp  Timer.hpp
include/Core/: Core.hpp
include/Game/: AiPlayer.hpp  AllBuildings.hpp  AllOrders.hpp  AllRessources.hpp  AllUnits.hpp  Anchor.hpp  Controlled.hpp  Entity.hpp  Grid.hpp  LuaFunc.hpp  Map.hpp  MapGenerator.hpp  Player.hpp  Predicat.hpp  Score.hpp  Selector.hpp  Stock.hpp  luawrapper.hpp
include/Game/Buildings/: Building.hpp  Forum.hpp  Habitation.hpp  LumberCamp.hpp  Mill.hpp  MiningCamp.hpp
include/Game/Orders/: Attack.hpp  Collect.hpp  Deposit.hpp  Move.hpp  Order.hpp  Strategy.hpp
include/Game/Ressources/: Food.hpp  Gold.hpp  Ressource.hpp  Stone.hpp  Wood.hpp
include/Game/Units/: Collector.hpp  Gatherer.hpp  (+6 more)
include/Gui/: AIModule.hpp  ActionModule.hpp  BarButton.hpp  ButtonHolder.hpp  CheckButton.hpp  ClickButton.hpp  DefaultEndGameInterface.hpp  DefaultGameInterface.hpp  DefaultKeysBindingInterface.hpp  DefaultLoadGameInterface.hpp  DefaultMenuInterface.hpp  DefaultNewGameInterface.hpp  DefaultOptionInterface.hpp  DefaultScoreInterface.hpp  EcoScoreModule.hpp  EncyclopedieModule.hpp  EndGameInterface.hpp  EndGameModule.hpp  FightScoreModule.hpp  GameInterface.hpp  GeneralScoreModule.hpp  GuiId.hpp  IButton.hpp  IModule.hpp  IUserInterface.hpp  InfoModule.hpp  KeysBindingInterface.hpp  KeysBindingModule.hpp  LazyScoreModule.hpp  LoadGameInterface.hpp  LoadGameModule.hpp  MapModule.hpp  MenuInterface.hpp  MenuModule.hpp  ModuleHolder.hpp  NewGameInterface.hpp  NewGameModule.hpp  OptionInterface.hpp  OptionModule.hpp  PauseModule.hpp  (+5 more)
include/Save/: SaveGame.hpp
include/Scenes/: Defeat.hpp  Game.hpp  Intro.hpp  KeysBinding.hpp  LoadGameMenu.hpp  MainMenu.hpp  NewGameMenu.hpp  OptionMenu.hpp  Options.hpp  Scenes.hpp  Score.hpp  StartScreen.hpp  Test.hpp  Victory.hpp
include/irrlicht/: IAttributeExchangingObject.h  ICursorControl.h  IDynamicMeshBuffer.h  IGUIElement.h  IMaterialRenderer.h  IMeshManipulator.h  ISceneNode.h  ISceneNodeAnimator.h  IShaderConstantSetCallBack.h  SAnimatedMesh.h  SKeyMap.h  SSharedMeshBuffer.h  SSkinMeshBuffer.h  matrix4.h
include/rendering/: Animator.hpp  Camera.hpp  Context.hpp  Mouse.hpp  RTSCamera.hpp  Renderer.hpp  Scene3d.hpp  Sound.hpp  Window.hpp
include/userInput/: inputHandler.hpp  keyboardHandler.hpp  mouseHandler.hpp
include/utils/: wrapper_containers.hpp
install/Linux/: install.sh
install/Windows/: install.bat
libraries/Linux/: libfmodL.so.9.4  liblua5.2.so.5.2
src/: Factory.cpp  Manager.cpp  Message.cpp  Observer.cpp  main.cpp
src/Game/: AiPlayer.cpp  Anchor.cpp  Controlled.cpp  Entity.cpp  Grid.cpp  LuaFunc.cpp  Map.cpp  MapGenerator.cpp  Order.cpp  Player.cpp  Stock.cpp  Strategy.cpp
src/Gui/: AIModule.cpp  ActionModule.cpp  DefaultEndGameInterface.cpp  DefaultGameInterface.cpp  DefaultKeysBindingInterface.cpp  DefaultLoadGameInterface.cpp  DefaultMenuInterface.cpp  DefaultNewGameInterface.cpp  DefaultOptionInterface.cpp  DefaultScoreInterface.cpp  EcoScoreModule.cpp  EncyclopedieModule.cpp  EndGameInterface.cpp  EndGameModule.cpp  FightScoreModule.cpp  GameInterface.cpp  GeneralScoreModule.cpp  InfoModule.cpp  KeyModule.cpp  KeysBindingInterface.cpp  KeysBindingModule.cpp  LazyScoreModule.cpp  LoadGameInterface.cpp  LoadGameModule.cpp  MapModule.cpp  MenuInterface.cpp  MenuModule.cpp  NewGameInterface.cpp  NewGameModule.cpp  OptionInterface.cpp  OptionModule.cpp  PauseModule.cpp  PressKeyModule.cpp  ScoreInterface.cpp  StatModule.cpp  text
src/Save/: SaveGame.cpp
src/Scenes/: AScene.cpp  Defeat.cpp  Game.cpp  Intro.cpp  KeysBinding.cpp  LoadGameMenu.cpp  Logger.cpp  MainMenu.cpp  NewGameMenu.cpp  OptionMenu.cpp  Score.cpp  StartScreen.cpp  Victory.cpp  main.cpp
src/core/: Core.cpp
src/rendering/: Animator.cpp  Camera.cpp  Context.cpp  RTSCamera.cpp  Renderer.cpp  Scene3d.cpp  Sound.cpp  Window.cpp
src/userInput/: inputHandler.cpp  keyboardHandler.cpp  mouseHandler.cpp
(+64 files in other folders)
